--- a/index.html
+++ b/index.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <title>Aula 1</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Curriculo</title>
 </head>
 
 <body>
-    <h1>lista ordenada</h1>
-    <ol>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-    </ol>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="profile">
+                <img class="profile-img" width="200px" src="./img/pic.png" alt="Foto do candidato">
+                <h1>Mali Welu</h1>
+                <h2>Desenvolvedor Front-End</h2>
+            </div>
+            <div class="contact-info">
+                <h2>Informações de contato</h2>
+                <ul>
+                    <li><i class="fa fab fa-phone"></i> +55 47 95555-5555</li>
+                    <li><i class="fa fab fa-envelope"></i> mali.dev@gmail.com</li>
+                    <li><i class="fa fab fa-github"></i>maliwelu</li>
+                </ul>
+            </div>
 
-    <h2>lista desordenada</h2>
-    <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-    </ul>
+            <div class="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Java</li>
+                    <li>JavaScript, Vue.Js, Angular</li>
+                    <li>HTML, CSS</li>
+                    <li>SQL, MariaDB, MongoDB</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="right-section">
+            <section class="about">
+                <h1>Sobre mim</h1>
+                <div class="about-inner">
+                    <p>Olá eu sou Mali. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum modi quaerat eius saepe nulla voluptatem illum. Cumque distinctio laborum quidem illum veniam optio voluptates sequi maxime ut possimus!</p>
+                    <br>
+                    <p>Fugit quod laborum nulla corporis quia fugiat incidunt quasi consectetur fuga doloremque iure debitis.</p>
+                    <p>Mollitia eos sit veniam consectetur iusto amet magni distinctio corrupti est. Dicta.</p>
+                </div>
+            </section>
+        </section>
+    </main>
 </body>
 
 </html>
