criação de layout de experiência

--- a/index.html
+++ b/index.html
@@ -47,6 +47,53 @@
                     <p>Mollitia eos sit veniam consectetur iusto amet magni distinctio corrupti est. Dicta.</p>
                 </div>
             </section>
+
+            <section class="experience">
+                <h1>experiência</h1>
+                <div class="box">
+                    <div>
+                        <h2>Lobaz</h2>
+                        <p>2019-Atual</p>
+                    </div>
+                    <div>
+                        <h2>Desenvolvedor Front-End</h2>
+                        <p>Tenetur odit facilis! Eligendi at omnis vitae nostrum, sapiente impedit nulla.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div>
+                        <h2>Harla</h2>
+                        <p>2017-2019</p>
+                    </div>
+                    <div>
+                        <h2>Desenvolvedor Front-End</h2>
+                        <p>Fuga facilis nulla dolorem assumenda, tenetur odit facilis consectetur! Eligendi at omnis vitae nostrum.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div>
+                        <h2>Livupo</h2>
+                        <p>2016-2017</p>
+                    </div>
+                    <div>
+                        <h2>Desenvolvedor Front-End</h2>
+                        <p>Nulla volutpat metus fermentum placerat elementum</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div>
+                        <h2>Luwi</h2>
+                        <p>2014-2016</p>
+                    </div>
+                    <div>
+                        <h2>Suporte técnico</h2>
+                        <p>Morbi commodo laoreet nulla, in bibendum quam molestie vitae</p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
