criação de layout de formação acadêmica

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </section>
 
-            <section class="experience">
+            <section>
                 <h1>experiência</h1>
                 <div class="box">
                     <div>
@@ -60,7 +60,6 @@
                         <p>Tenetur odit facilis! Eligendi at omnis vitae nostrum, sapiente impedit nulla.</p>
                     </div>
                 </div>
-
                 <div class="box">
                     <div>
                         <h2>Harla</h2>
@@ -71,7 +70,6 @@
                         <p>Fuga facilis nulla dolorem assumenda, tenetur odit facilis consectetur! Eligendi at omnis vitae nostrum.</p>
                     </div>
                 </div>
-
                 <div class="box">
                     <div>
                         <h2>Livupo</h2>
@@ -82,7 +80,6 @@
                         <p>Nulla volutpat metus fermentum placerat elementum</p>
                     </div>
                 </div>
-
                 <div class="box">
                     <div>
                         <h2>Luwi</h2>
@@ -91,6 +88,30 @@
                     <div>
                         <h2>Suporte técnico</h2>
                         <p>Morbi commodo laoreet nulla, in bibendum quam molestie vitae</p>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <h1>educação</h1>
+                <div class="box">
+                    <div>
+                        <h2>UNIVILLE</h2>
+                        <p>2022-Atual</p>
+                    </div>
+                    <div>
+                        <h2>fermentum justo</h2>
+                        <p>Duis eget tellus mi. Nam malesuada.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div>
+                        <h2>Latio</h2>
+                        <p>2018-2021</p>
+                    </div>
+                    <div>
+                        <h2>Suspendisse sit amet</h2>
+                        <p>Vivamus id orci at est tempus viverra.</p>
                     </div>
                 </div>
             </section>
