--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Curriculo</title>
 </head>
 
@@ -20,9 +22,9 @@
             <div class="contact-info">
                 <h2>Informações de contato</h2>
                 <ul>
-                    <li><i class="fa fab fa-phone"></i> +55 47 95555-5555</li>
-                    <li><i class="fa fab fa-envelope"></i> mali.dev@gmail.com</li>
-                    <li><i class="fa fab fa-github"></i>maliwelu</li>
+                    <li><i style="font-size:22px;" class="fa fab fa-phone fa-"></i> +55 47 95555-5555</li>
+                    <li><i style="font-size:18px;" class="fa fab fa-envelope"></i> mali.dev@gmail.com</li>
+                    <li><i style="font-size:22px;" class="fa fab fa-github"></i>maliwelu</li>
                 </ul>
             </div>
 
@@ -112,6 +114,30 @@
                     <div>
                         <h2>Suspendisse sit amet</h2>
                         <p>Vivamus id orci at est tempus viverra.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <h1>certificados</h1>
+                <div class="box">
+                    <div>
+                        <h2>Neque</h2>
+                        <p>Abril/2022</p>
+                    </div>
+                    <div>
+                        <h2>ultricies</h2>
+                        <p>Porro quisquam est qui dolorem.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div>
+                        <h2>adipisci</h2>
+                        <p>Setembro/2021</p>
+                    </div>
+                    <div>
+                        <h2>eleifend</h2>
+                        <p>Quisque egestas tortor eu augue.</p>
                     </div>
                 </div>
             </section>
